--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>🎂 Отсчёт до дня рождения</title>
+  <title>Отсчёт до дня рождения</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -648,11 +648,9 @@
         </div>
         <div class="button-group">
           <button id="startBtn" class="btn">
-            <span class="btn-icon">▶️</span>
             <span>Запустить отсчёт</span>
           </button>
           <button id="resetBtn" class="btn reset">
-            <span class="btn-icon">🔄</span>
             <span>Сброс</span>
           </button>
         </div>
