--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
     
     <!-- Заголовок -->
     <div class="header">
-      <h1>🎂 Отсчёт до дня рождения</h1>
+      <h1>Отсчёт до дня рождения</h1>
       <p>Установите дату и следите за обратным отсчётом до самого важного дня в году!</p>
     </div>
 
