--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
     
     <!-- Заголовок -->
     <div class="header">
-      <h1>🎂 Отсчёт до дня рождения</h1>
+      <h1>Отсчёт до дня рождения</h1>
       <p>Установите дату и следите за обратным отсчётом до самого важного дня в году!</p>
     </div>
 
@@ -774,11 +774,9 @@
         </div>
         <div class="button-group">
           <button id="startBtn" class="btn">
-            <span class="btn-icon">▶️</span>
             <span>Запустить отсчёт</span>
           </button>
           <button id="resetBtn" class="btn reset">
-            <span class="btn-icon">🔄</span>
             <span>Сброс</span>
           </button>
         </div>
